
If you have written a custom service,  see the upgrade guide on how to port your
service to the new architecture.

Added the ability to generate archive records in software, thus opening the door
for supporting weather stations that do not have a logger.

Support for the  Oregon Scientific WMR100, the cheapest  weather station I could
find, in order to demonstrate the above!

Introduced  weedb,  a database-independent  Python  wrapper  around sqlite3  and
MySQLdb, which fixes some of their flaws.

Ported everything to use weedb, and thus MySQL (as well as sqlite)

Internally, the databases can now use  either Metric units, or US Customary. NB:
you cannot switch systems in the middle  of a database. You have to stick to one
or other other. However, the  utility config_database.py does have a reconfigure
option that allows copying the data to a new database, performing the conversion
along the way. See the Customizing Guide.

You can now use "mmHg" as a unit of pressure.

Changed  the engine  architecture  so it  is  more event  driven.   It now  uses
callbacks, making it easier to add new event types.

Added utility config_vp.py, for configuring the VantagePro hardware.

Added utility config_database.py, for configuring the databases.

Made it easier  to write custom RESTful protocols. Thanks to  user Brad, for the
idea and the use case!

When doing DMPAFT, no longer tries to correct for DST.

Explicitly starts the logger in  the Vantage stations by issuing command 'START'
on engine start up.

The stats  type 'squarecount' now contains  the number of  valid wind directions
that went into calculating 'xsum' and 'ysum'.  It used to be the number of valid
wind speeds.  Wind  direction is now calculated using  'squarecount' (instead of
'count').

Simplified and reduced the memory requirements of the CRC16 calculations.

Lots of  little nips  and tucks here  and there,  mostly to reduce  the coupling